--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cron": "^3.2.1",
+    "cron-parser": "^5.4.0",
     "dotenv": "^16.4.5",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
