--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.3",
     "@gitbeaker/rest": "^40.0.3",
+    "@langchain/anthropic": "^0.3.30",
+    "@langchain/community": "^0.3.57",
+    "@langchain/core": "^0.3.78",
+    "@langchain/langgraph": "^0.4.9",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
@@ -31,6 +35,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/schedule": "^4.1.2",
+    "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
     "@octokit/rest": "^20.0.2",
     "@types/cron": "^2.4.3",
@@ -40,17 +45,26 @@
     "class-validator": "^0.14.2",
     "cron": "^3.2.1",
     "cron-parser": "^5.4.0",
+    "dompurify": "^3.2.7",
     "dotenv": "^16.4.5",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.8.0",
     "jira-client": "^8.2.2",
     "joi": "^17.13.1",
+    "jsdom": "^27.0.0",
+    "langchain": "^0.3.35",
+    "mermaid": "^11.12.0",
+    "mongodb": "^6.20.0",
+    "mysql2": "^3.15.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "tedious": "^18.6.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -67,6 +81,7 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
+    "@types/tedious": "^18.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
