--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.1.5",
     "@anthropic-ai/sdk": "^0.24.3",
+    "@azure/monitor-query-logs": "^1.0.0",
     "@gitbeaker/rest": "^40.0.3",
     "@langchain/anthropic": "^0.3.30",
     "@langchain/community": "^0.3.57",
