--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
     "tedious": "^18.6.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "which": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
